fosdem and various updates

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "What's Next XOXO",
-  "short_name": "whatsnextxoxo",
+  "name": "What's Next FOSDEM 2024",
+  "short_name": "whatsnextfosdem2024",
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "standalone",
